# secure_hash

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: secure_hash.h
src/: secure_hash.cpp
test/: CMakeLists.txt  main.cpp
